# unusualvolume

./: .gitignore  LICENSE.md  README.md  pyproject.toml
data/: tickers.json
tests/: test_unusualvolume.py
unusualvolume/: cli.py  scanner.py  tickers.py
